kustomize/librespeed/ingress.yaml
  apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    name: librespeed
  spec:
    ingressClassName: nginx
    rules:
    - host: librespeed.k8s
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: librespeed
              port:
                name: web
